# youtube-scraper

./: .gitignore  Dockerfile  LICENSE  README.md  SKILL.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: SKILL.md
docs/superpowers/plans/: 2026-06-15-docs-and-refactor.md
examples/: urls.txt
scripts/: config.py  youtube_scraper.py
scripts/cache/: cache_manager.py
scripts/extractor/: __init__.py  channel_extractor.py  downloader.py  pipeline_extractor.py  playlist_extractor.py  search_extractor.py  subtitle_extractor.py  video_extractor.py
scripts/formatter/: __init__.py  csv_formatter.py  json_formatter.py  markdown_formatter.py
scripts/reports/: __init__.py  report_generator.py
scripts/tests/: test_cli_behaviors.py  test_formatters.py  test_helpers.py  test_validators.py  test_video_extractor.py
scripts/utils/: __init__.py  error_handler.py  failure_tracker.py  helpers.py  logger.py  ryd_client.py  sentiment_analyzer.py  transcript_parser.py  validators.py
